# risc0-vfhe

./: README.md  rust-toolchain
data/: sk1  sk2
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
ttfhe/: Cargo.toml  README.md
ttfhe/src/: ggsw.rs  glwe.rs  lib.rs  lwe.rs  poly.rs  utils.rs
