[package]
name = "blind_rotate"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
include_bytes_aligned = "0.1.2"
risc0-zkvm = { version = "0.20.1", default-features = false, features = [ "std" ] }
ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "karatsuba" }
